@@ -18,6 +18,7 @@ next version - not released yet
 * Ticket #5294, Use internal LAV Splitter for demuxing WTV files
 * Updated Little CMS to v2.7 (git 926963a)
 * Updated Unrar to v5.2.6
+* Updated SoundTouch to v1.8.0 r208
 * Updated LAV Filters to v0.64.0.11:
     - LAV Video Decoder: Faster DXVA decoding in copy-back mode (direct output mode)
     - LAV Video Decoder: Support for HEVC Main10 DXVA2 decoding in copy-back mode
